--- a/projet6/src/style/components/carrousel.scss
+++ b/projet6/src/style/components/carrousel.scss
@@ -5,7 +5,9 @@
     justify-content: center;
     position: relative;
     align-items: center;
-    height: 40vh;
+    // height: 40vh;
+    // height: 100%;
+    // width: 100%;
     overflow: hidden;
 }   
 
@@ -15,17 +17,23 @@
     left: 1%;
     width: 50px;
     height: 100px;
+    fill: white;
+    color: white;
+    z-index: 2;
 }
 
 .img-slider{
- 
-    object-fit:fill;
+    position: relative;
+    object-fit:cover;
     // flex-shrink: 0;
     
 //     min-width: 100%;
 //   min-height: 100%;
-  height: auto;
-  width: auto;
+  height: 100%;
+  width: 100%;
+  max-height: 70vh;
+  min-height: 50%;
+  border-radius: 20px;
 //   background-size:contain;
   
 }
@@ -35,6 +43,7 @@
     right: 1%;
     width: 50px;
     height: 100px;
+    fill: white;
 }
 
 .index {
