--- a/projet6/src/style/pages/home.scss
+++ b/projet6/src/style/pages/home.scss
@@ -26,7 +26,7 @@
     .home-menu {
         border-radius: 30px;
         margin-top: 40px;
-        padding: 50px;
+        padding: 30px;
         width: 90%;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -67,6 +67,26 @@
 
     }
     .card img:hover {
-        filter:grayscale(70%)
+        filter:contrast(150%)
+    }
+}
+
+@media (max-width: 500px) {
+    .home{
+    .home-menu {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        padding: 0px 10px;
+    }
+
+    .title{
+        text-align: center;
+        color: white;
+        text-shadow: 0px 2px black;
+        font-size: 30px;
+        font-weight: 500;
+        filter: brightness(190%);
+    }
     }
 }
