--- a/projet6/src/style/components/carrousel.scss
+++ b/projet6/src/style/components/carrousel.scss
@@ -16,7 +16,7 @@
     top: 45%;
     left: 1%;
     width: 50px;
-    height: 100px;
+    height: 50px;
     fill: white;
     color: white;
     z-index: 2;
@@ -31,8 +31,8 @@
 //   min-height: 100%;
   height: 100%;
   width: 100%;
-  max-height: 70vh;
-  min-height: 50%;
+  max-height: 60vh;
+  min-height: 60vh;
   border-radius: 20px;
 //   background-size:contain;
   
@@ -42,7 +42,7 @@
     top: 45%;
     right: 1%;
     width: 50px;
-    height: 100px;
+    height: 50px;
     fill: white;
 }
 
@@ -51,5 +51,40 @@
     bottom: 1%;
     left: 50%;
     color: white;
-    font-size: 30px;
+    font-size: 20px;
+}
+
+@media (max-width: 600px) {
+    .leftArrow {
+        position: absolute;
+        top: 25%;
+        left: 1%;
+        width: 20px;
+        height: 100px;
+        fill: white;
+        color: white;
+        z-index: 2;
+    }
+
+    .rightArrow{
+        position: absolute;
+        top: 25%;
+        right: 1%;
+        width: 20px;
+        height: 100px;
+        fill: white;
+    }
+
+    .img-slider{
+        height: 20vh;
+        min-height: 30vh;
+    }
+
+    .index {
+        position: absolute;
+        bottom: 1%;
+        left: 47.5%;
+        color: white;
+        font-size: 20px;
+    }
 }
