--- a/projet6/src/style/pages/home.scss
+++ b/projet6/src/style/pages/home.scss
@@ -2,9 +2,9 @@
 .home{
     .background-div{
         width: 90%;
-        height: 223px;
+        height: 20vh;
         padding: 0px 20px;
-        border-radius: 50px;
+        border-radius: 20px;
         background-repeat: no-repeat;
         background-position: center;
         background-size:cover;
@@ -12,6 +12,13 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
+        font-size: calc(0.5rem + 0.8vw);
+        margin: 5px 0px;
+    }
+
+    .background-div h1 {
+
+        font-size: calc(1.5em + 0.8vw);
     }
 
     .title{
@@ -31,8 +38,8 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: repeat(5, 1fr);
-        grid-column-gap: 40px;
-        grid-row-gap: 40px;
+        grid-column-gap: 20px;
+        grid-row-gap: 20px;
         background-color: #F6F6F6;
     }
 
@@ -54,30 +61,48 @@
         width: 100%;
         border-radius: 10px;
         object-fit: cover;
+        filter:brightness(70%)
     }
     
     .card p {
         display: flex;
         align-items: flex-end;  
         position: absolute;
+        bottom: 5px;
         font-weight: 700;
         word-wrap:break-word;
-        padding: 10px;
-        font-size: 18px;
+        padding: 5px;
+        font-size: calc(0.5rem + 0.8vw);
+        margin: 5px 0px
 
     }
     .card img:hover {
-        filter:contrast(150%)
+        filter:contrast(120%)
     }
+
+
+
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     .home{
+        .background-div{
+            height: 10vh;
+            margin: 10px 0px
+        }
+
+        .card p {
+            font-size: 16px;
+        }
+
     .home-menu {
-        display: flex;
-        flex-direction: column;
+        grid-template-columns: repeat(1, 1fr);
+        grid-auto-rows: 1fr;
         flex-wrap: wrap;
+      
         padding: 0px 10px;
+        margin: 0;
+        padding: 0;
     }
 
     .title{
@@ -89,4 +114,6 @@
         filter: brightness(190%);
     }
     }
+
+  
 }
