project 6 fixing issues

--- a/projet6/src/style/components/footer.scss
+++ b/projet6/src/style/components/footer.scss
@@ -41,7 +41,7 @@ h2 {
 
     h2{
         font-size: 16px;
-        margin: 10px 0px;
+        margin: 20px 45px;
     }
 
     .footer {
@@ -53,9 +53,9 @@ h2 {
     }
 
 
-.footer {
-    width: 100%;
-    bottom: 0;
-    position: fixed;
-}
+// .footer {
+//     width: 100%;
+//     bottom: 0;
+//     position: fixed;
+// }
 }
