--- a/projet6/src/style/_settings.scss
+++ b/projet6/src/style/_settings.scss
@@ -35,8 +35,16 @@ a {
 .page {
     display: flex;
     flex-direction: column;
+    width: 100%;
+    min-height: 70vh;
+}
+
+.page-info {
+    display: flex;
+    flex-direction: column;
     align-items: center;
     width: 100%;
+    min-height: 70vh;
 }
 
 .renderRow {
@@ -85,7 +93,7 @@ grid-template-rows: 1fr;
 .lastRowItemRight {
     border-radius: 20px;
 }
-
+ 
 
 @media (max-width: 500px) {
     .lastRow{
