--- a/projet6/src/style/pages/home.scss
+++ b/projet6/src/style/pages/home.scss
@@ -1,34 +1,49 @@
-
-.home{
-    .background-div{
+.home {
+    .background-div {
         width: 90%;
         height: 20vh;
         padding: 0px 20px;
         border-radius: 20px;
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size:cover;
-        background-image:url('../../assets/img/view2.png');
+        position: relative; /* Add this to position the pseudo-element absolutely */
         display: flex;
         flex-direction: column;
         justify-content: center;
         font-size: calc(0.5rem + 0.8vw);
         margin: 5px 0px;
+
+        &::before { /* Add this pseudo-element */
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover;
+            background-image: url('../../assets/img/view2.png');
+            filter: brightness(70%); /* Apply the filter here */
+            border-radius: 10px; /* Inherit the border-radius from the parent */
+        }
     }
+
+    .title {
+        text-align: center;
+        color: white;
+        text-shadow: 0px 2px black;
+        font-size: 46px;
+        font-weight: 700;
+        /* filter: brightness(190%); Remove this */
+        z-index: 1; /* Add this to make sure the title appears above the pseudo-element */
+    }
+
+
 
     .background-div h1 {
 
         font-size: calc(1.5em + 0.8vw);
     }
 
-    .title{
-        text-align: center;
-        color: white;
-        text-shadow: 0px 2px black;
-        font-size: 46px;
-        font-weight: 700;
-        filter: brightness(190%);
-    }
 
     .home-menu {
         border-radius: 30px;
