--- a/projet6/src/style/pages/about.scss
+++ b/projet6/src/style/pages/about.scss
@@ -22,15 +22,12 @@
     color:var(--color3);
    width: 100%;
     position: relative;
-
     // height: 54px;
     background-color: white;
     // margin: 30px 0px;
     // padding: 10px 20px;
     border-radius: 5px;
     font-size: 24px;
-
-
 }
 
 .accordeon {
@@ -41,9 +38,13 @@
     margin: 10px 0px;
     height: 50px;
     background-color: var(--color1);
-    padding: 0px 10px;
+    padding: 0px 10px;  
     border-radius: 10px;
     font-size: calc(0.5rem + 0.8vw);
+}   
+
+.accordeon-nomargin {
+   margin: 10px 0px 0px 0px;
 }
 
 .accordeonLeft {
@@ -81,7 +82,7 @@
     position: relative;
     padding: 5px 30px;
     
-    width: 130%;
+    width: 133%;
     // text-align: center;
     background-color: rgb(244, 244, 244);
     padding: 10px 10px 10px 10px;
@@ -95,7 +96,7 @@
     align-items: stretch;
     padding: 0;
     width: 75%;
-    margin: 10px 0px;
+  
 }
 
 @media (max-width: 500px) {
@@ -128,13 +129,16 @@
     .accordeon {
         font-size: medium;
         height: 30px;
-        margin: 0px;
         width: 100%;
-        margin: 5px 0px;
+        margin: 10px 0px;
     }
+
+    .accordeon-nomargin {
+        margin: 10px 0px 0px 0px;
+     }
     .test-margin{
         width: 90%;
-        margin: 5px 0px ;
+        margin: 0px 0px ;
         
     }
     .text-accordeon {
