--- a/projet6/src/style/pages/notfound.scss
+++ b/projet6/src/style/pages/notfound.scss
@@ -1,12 +1,20 @@
 .notfound {
-a:hover {
-    text-decoration: underline;
-  }
+// a:hover {
+//     text-decoration: underline;
+//   }
+
+min-height: 70vh ;
+
   h2{
       color: var(--color1);
   }
 }
 
+
+
+.backpage {
+  border-bottom: solid black 1px;
+}
 .notfound-item{
   margin: 50px 0px;
 }
@@ -14,6 +22,7 @@ a:hover {
 @media (max-width: 500px ) {
   .notfound {
     padding: 25px;
+
   }
 
   .notfound svg {
