--- a/projet6/src/style/pages/about.scss
+++ b/projet6/src/style/pages/about.scss
@@ -27,7 +27,7 @@
     // margin: 30px 0px;
     // padding: 10px 20px;
     border-radius: 5px;
-    font-size: 24px;
+
 }
 
 .accordeon {
@@ -35,7 +35,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    margin: 10px 0px;
+    margin: 10px 0px 0px 0px;
     height: 50px;
     background-color: var(--color1);
     padding: 0px 10px;  
@@ -56,7 +56,10 @@
 }
 .accordeon h2{
     margin: 0px;
+    font-size: 24px;
+    font-weight: 700;
 }
+
 
 .accordeon svg{
     fill: white
