project 6 final commit

--- a/projet6/src/style/components/navbar.scss
+++ b/projet6/src/style/components/navbar.scss
@@ -5,12 +5,24 @@
     height: 40px;
 }
 
-.navbar-item:hover {
-    border-bottom: solid black 2px;
+.nav-menu {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
 }
 
-.navbar-item::selection {
-    border-bottom: solid black 2px;
+.nav-link {
+    text-decoration: none;
+    color: black;
+    padding: 10px 10px;
+    position: relative;
+}
+
+.nav-link.active{
+    
+    border-bottom: black solid 3px;
+    border-bottom-width: 3px ;
+    transition: width 0.3s;
 }
 
 .navbar svg:nth-child(2){
@@ -60,7 +72,7 @@
     .navbar{
         margin: 5px;
         height: 50px;
-        padding: 0px 20px;
+        padding: 0px 15px;
     }
 
     .navbar-menu{
@@ -69,14 +81,12 @@
     }
 
     .navbar-item{
-        margin: 0px 10px;
-        font-size: calc(0.8rem + 0.8vw);
+        margin: 0px 5px;
+        font-size: calc(0.7rem + 0.8vw);
         font-weight: 500;
+        text-transform: uppercase;
     }
 
-    .navbar-item:hover {
-        border-bottom: solid dark 2px;
-    }
 
   
 }
