--- a/projet6/src/style/pages/about.scss
+++ b/projet6/src/style/pages/about.scss
@@ -18,7 +18,7 @@
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr;
-    
+    margin: 5px 0px;
     color:var(--color3);
    width: 100%;
     position: relative;
@@ -148,6 +148,10 @@
         width: 110%;
         font-size: 14px;
         padding: 10px 10px 10px 10px;
+    }
+
+    .accordeon h2 {
+        font-size: 20px;
     }
 }
 
